o committing doc files into new layout

--- a/trunk/doc/jsspp/architecture.tex
+++ b/trunk/doc/jsspp/architecture.tex
@@ -28,7 +28,7 @@ Users and system administrators interact with SLURM using simple commands.
 %external entity as will be described later. 
 
 \begin{figure}[tb]
-\centerline{\epsfig{file=figures/arch.eps,scale=0.40}}
+\centerline{\epsfig{file=../figures/arch.eps,scale=0.40}}
 \caption{SLURM Architecture}
 \label{arch}
 \end{figure}
@@ -54,7 +54,7 @@ all nodes allocated to the job, or several job steps may independently
 use a portion of the allocation.
 
 %\begin{figure}[tcb]
-%\centerline{\epsfig{file=figures/entities.eps,scale=0.7}}
+%\centerline{\epsfig{file=../figures/entities.eps,scale=0.7}}
 %\caption{SLURM Entities}
 %\label{entities}
 %\end{figure}
@@ -69,7 +69,7 @@ use a portion of the allocation.
 %the remaining nodes of its allocation.
 
 \begin{figure}[tb]
-\centerline{\epsfig{file=figures/slurm-arch.eps,scale=0.5}}
+\centerline{\epsfig{file=../figures/slurm-arch.eps,scale=0.5}}
 \caption{SLURM Architecture - Subsystems}
 \label{archdetail}
 \end{figure}
