--- a/trunk/doc/jsspp/perf.tex
+++ b/trunk/doc/jsspp/perf.tex
@@ -1,7 +1,7 @@
 \section{Performance Study}
 
 \begin{figure}[htb]
-\centerline{\epsfig{file=figures/times.eps}}
+\centerline{\epsfig{file=../figures/times.eps}}
 \caption{Time to execute /bin/hostname with various node counts}
 \label{timing}
 \end{figure}
