o remove reference to nonexistent "arch2" figure

--- a/trunk/doc/pubdesign/report.tex
+++ b/trunk/doc/pubdesign/report.tex
@@ -225,7 +225,7 @@ pending jobs via the API.
 \subsection{Architecture}
 
 \begin{figure}[tb]
-\centerline{\epsfig{file=../figures/arch2.eps,scale=0.20}}
+\centerline{\epsfig{file=../figures/arch.eps,scale=0.20}}
 \caption{\small SLURM Architecture}
 \label{arch}
 \end{figure}
