--- a/trunk/doc/jsspp/jsspp.tex
+++ b/trunk/doc/jsspp/jsspp.tex
@@ -68,9 +68,7 @@ SLURM include: Chris Dunlap, Joey Ekstrom, Jim Garlick, Kevin Tew
 and Jay Windley.
 
 \newpage
-%\bibliographystyle{plain}
-%\bibliography{project}
-
 \bibliographystyle{abbrv}
 \bibliography{references}
+/biblio
 \end{document}
