--- a/trunk/doc/jsspp/survey.tex
+++ b/trunk/doc/jsspp/survey.tex
@@ -10,7 +10,7 @@ massively parallel systems. PBS was developed as a replacement for
 NQS (Network Queuing System) by many of the same people.
 
 PBS supports sophisticated scheduling logic (via the Maui 
-Scheduler\footnote{http://superclustergroup.org/maui}). 
+Scheduler). 
 PBS spawn's daemons on each 
 machine to shepherd the job's tasks.
 It provides an interface for administrators to easily 
@@ -24,12 +24,11 @@ high priority queue for smaller "interactive" jobs.  Signal to daemons
 causes current log file to be closed, renamed with 
 time-stamp, and a new log file created.
 
-Although the PBS is portable and has broad user base, it has following drawbacks.
-First, PBS is implementted using single thread and hence exhibits poor performance
-especially when a compute node in the system dies in which case the PBS
-tries to contact down nodes, while other activities must wait. Second, PBS
-has weak mechanism for starting and cleaning up parallel jobs. Finally, the PBS
-has very poor scalability and is not suitable for large clusters.
+Although the PBS is portable and has broad user base, it has significant drawbacks.
+PBS is single threaded and hence exhibits poor performance on large clusters. 
+This is particularly problematic when a compute node in the system fails: 
+PBS tries to contact down node while other activities must wait. 
+PBS also has a weak mechanism for starting and cleaning up parallel jobs. 
 %Specific complaints about PBS from members of the OSCAR group (Jeremy Enos, 
 %Jeff Squyres, Tim Mattson):
 %\begin{itemize}
@@ -80,17 +79,29 @@ has very poor scalability and is not suitable for large clusters.
 %open source community) into the true open source version of PBS is the source
 %of some frustration.
 
+
+\subsection{Quadrics RMS}
+
+Quadrics RMS\cite{Quadrics02}
+(Resource Management System) is a cluster management system for 
+Unix systems having Quadrics Elan interconnects. 
+RMS functionality and performance is excellent. 
+It major drawback is the requirement for a Quadrics interconnect. 
+The priorietary code and cost may also pose difficulties under some 
+circumstances.
+
+
 \subsection*{Maui Scheduler}
 
-Maui Scheduler~\cite{Maui}
-is an advance reservation HPC batch scheduler for use with SP, 
-O2K, and UNIX/Linux clusters. It is widely used to extend the 
-functionality of PBS and LoadLeveler
+Maui Scheduler~\cite{Maui} is an advance reservation HPC batch scheduler 
+for use with SP, O2K, and UNIX/Linux clusters. 
+It is widely used to extend the functionality of PBS and LoadLeveler, 
+which Maui requires to perform the parallel job initiation and management.
 
 \subsection*{Distributed Production Control System (DPCS)}
 
 The Distributed Production Control System (DPCS)~\cite{DPCS}
-is a resource manager developed at Lawrence Livermore National Laboratory (LLNL). 
+is a scheduler developed at Lawrence Livermore National Laboratory (LLNL). 
 The DPCS provides basic data collection and reporting
 mechanisms for prject-level, near real-time accounting and resource allocation
 to customers with established limits per customers' organization budgets,
@@ -118,23 +129,27 @@ overuse of a computer where not authorized.
 %\end{itemize}
 
 While DPCS does have these attractive characteristics, it supports only a 
-limited number of computer systems: IBM RS/6000 and SP, Linux with RMS, 
-Sun Solaris, and Compaq Alpha. DPCS also lacks commercial support.
+limited number of computer systems: IBM RS/6000 and SP, Linux, 
+Sun Solaris, and Compaq Alpha. 
+Like the Maui Scheduler, DPCS requires an underlying infrastructure for 
+parallel job initiation and management (LoadLeveler, NQS, RMS or SLURM).
 
 \subsection*{LoadLeveler}
 
-LoadLeveler~cite{LoadLevelerManual,LoadLevelerWeb} 
+LoadLeveler~\cite{LoadLevelerManual,LoadLevelerWeb} 
 is a proprietary batch system and parallel job manager by 
 IBM. LoadLeveler supports few non-IBM systems. Very primitive 
 scheduling software exists and other software is required for reasonable 
-performance such as Maui Scheduler and DPCS. 
+performance such as Maui Scheduler or DPCS. 
 The LoadLeveler is simple and very flexible queue and job class structure is available 
 operating in "matrix" fashion. 
-The biggest problem of the LoadLeveler is its extremely poor scalability. It was observed that 
-it took more than 20 minutes to start-up a 512-task job using LoadLeveler on one of
-the IBM SP machines at LLNL.
-In addition, all jobs must be initiated through the LoadLeveler, and a special version of
-MPI is requested to run a parallel job.
+The biggest problem of the LoadLeveler is its extremely poor scalability. 
+It typically requires 20 minutes to execute even a trivial 500-node, 8000-task
+on the IBM SP computers at LLNL.
+%In addition, all jobs must be initiated through the LoadLeveler, and a special version of
+%MPI is requested to run a parallel job. 
+%[So do RMS, SLURM, etc. for interconnect set-up - Moe]%
+%
 %Many configuration files exist with signals to 
 %daemons used to update configuration (like LSF, good). All jobs must 
 %be initiated through LoadLeveler (no real "interactive" jobs, just 
@@ -169,8 +184,10 @@ architectures, it has sophisticated scheduling software including
 fair-share, backfill, consumable resources, an job preemption and 
 very flexible queue structure.
 It also provides good status information on nodes and LSF daemons.
-The LSF share many of its shortcomings with the LoadLeveler: job initiation only
-through LSF, requirement of a spwcial MPI library, etc.
+While LSF is quite powerful, it is not open source and is costly on 
+larger clusters.
+%The LSF share many of its shortcomings with the LoadLeveler: job initiation only
+%through LSF, requirement of a spwcial MPI library, etc.
 %Limits are available on both a per process bs per-job  
 %basis. Time limits include CPU time and wall-clock time. Many 
 %configuration files with signals to daemons used to update 
@@ -194,7 +211,7 @@ through LSF, requirement of a spwcial MPI library, etc.
 
 \subsection*{Condor}
 
-Condor~\cite{Condor,Litkow88,Basney97}
+Condor~\cite{Condor,Litzkow88,Basney97}
 is a batch system and parallel job manager 
 developed by the University of Wisconsin. 
 Condor was the basis for IBM's LoadLeveler and both share very similar 
@@ -211,21 +228,7 @@ mechanism is used to relocate work on demand (when the "owner" of a
 desktop machine wants to resume work).
 
 
-
-\subsection*{Memory Channel}
-
-Memory Channel is a high-speed interconnect developed by 
-Digital/Compaq with related software for parallel job execution. 
-Special version of MPI required. The application spawns tasks on 
-other nodes. These tasks connect themselves to the high speed 
-interconnect. No system level tool to spawns the tasks, allocates 
-interconnect resources, or otherwise manages the parallel job (Note: 
-This is sometimes a problem when jobs fail, requiring system 
-administrators to release interconnect resources. There are also 
-performance problems related to resource sharing).
-
 \subsection*{Linux PAGG Process Aggregates}
-
 
 PAGG~\cite{PAGG}
 consists of modifications to the linux kernel that allows
@@ -235,8 +238,8 @@ all members of the same set. A set would be implemented as a container
 for the member processes. For instance, process sessions and groups
 could have been implemented as process aggregates.
 
-\subsection*{Beowulf Distributed Process Space (BPROC)}
 
+\subsection*{Beowulf Distributed Process Space (BPROC)}
 
 The Beowulf Distributed Process Space 
 (BPROC)
@@ -283,14 +286,6 @@ communication standard.
 %MPICH\footnote{http://www-unix.mcs.anl.gov/mpi/mpich/}
 %is a freely available, portable implementation of MPI,
 %the Standard for message-passing libraries.
-%
-%\subsection{Quadrics RMS}
-%
-%Quadrics
-%RMS\footnote{http://www.quadrics.com/downloads/documentation/}
-%(Resource Management System) is a cluster management system for 
-%Linux and Tru64 which supports the
-%Elan3 interconnect.  
 %
 %\subsection{Sun Grid Engine}
 %
