Minor word-smithing.

--- a/trunk/doc/jsspp/conclusions.tex
+++ b/trunk/doc/jsspp/conclusions.tex
@@ -1,9 +1,10 @@
 \section{Conclusion and Future Plans}
 
-We have developed and presented SLURM, a simple, highly scalable, robust, and portable cluster resource
-management system, in this paper.
+We have presented in this paper an overview of SLURM, a simple, highly scalable, robust, 
+and portable cluster resource management system.
 The contribution of this work is that we have provided a immediately-available
-and inexpensive tool that virtually anybody can use to efficiently manage clusters of different size and architecture.
+and open-source tool that virtually anybody can use to efficiently manage clusters of 
+different sizes and architecture.
 We expect SLURM to begin production use on LLNL Linux clusters 
 starting in March 2003 and be available for distribution shortly 
 thereafter. 
