Added pathname for local ".ps" files in macro so they work with different papers in different subdirectories.

--- a/trunk/doc/common/llnlCoverPage.tex
+++ b/trunk/doc/common/llnlCoverPage.tex
@@ -60,7 +60,7 @@
 \begin{pspicture}(0,0)(17,24.)
 % turn on the grid for placement
 % \psgrid[subgriddiv=2]
-\rput(2.3,11.5){\epsfig{file=Logo_for_papers.ps,width=\logoWidth}}
+\rput(2.3,12.5){\epsfig{file=../common/Logo_for_papers.ps,width=\logoWidth}}
 \rput(11.2,23.){\parbox{12.0cm}{\large\bf%
 \begin{flushright}
 % jg - just pass in full UCRL string
@@ -168,7 +168,7 @@ Laboratory under Contract No. W-7405-Eng-48.
 \begin{pspicture}(0,0)(17,24.)
 % turn on the grid for placement
 % \psgrid[subgriddiv=2]
-\rput{90}(2.3,11.5){\epsfig{file=Rule_and_address.ps,width=\logoWidth}}
+\rput{90}(2.3,12.5){\epsfig{file=../common/Rule_and_address.ps,width=\logoWidth}}
 % \rput*[l]{90}(5.5,0){\psframebox{\parbox{8.0cm}{\large%
 % \begin{flushleft}
 % University of California\\
