--- a/trunk/doc/pubdesign/report.tex
+++ b/trunk/doc/pubdesign/report.tex
@@ -225,7 +225,7 @@ pending jobs via the API.
 \subsection{Architecture}
 
 \begin{figure}[tb]
-\centerline{\epsfig{file=../figures/arch.eps,scale=0.20}}
+\centerline{\epsfig{file=../figures/arch.eps,scale=0.35}}
 \caption{\small SLURM Architecture}
 \label{arch}
 \end{figure}
@@ -409,7 +409,7 @@ SLURM uses a general purpose plugin mechanism.  A SLURM plugin is a
 dynamically linked code object which is loaded explicitly at run time
 by the SLURM libraries.  A plugin provides a customized implemenation
 of a well-defined API connected to tasks such as authentication,
-interconnect fabric, task scheduling, etc.  A set of functions is defined
+interconnect fabric, task scheduling, etc.  A common set of functions is defined
 for use by all of the different infrastructures of a particular variety.
 For example, the authentication plugin must define functions such as: 
 {\tt slurm\_auth\_create} to create a credential, {\tt slurm\_auth\_verify}
