Minor word-smithing.

--- a/trunk/doc/jsspp/abstract.tex
+++ b/trunk/doc/jsspp/abstract.tex
@@ -1,7 +1,7 @@
 \begin{abstract}
 A new cluster resource management system called 
-Simple Linux Utility Resource Management (SLURM) is developed and 
-presented in this paper. SLURM, initially developed for large 
+Simple Linux Utility Resource Management (SLURM) is described 
+in this paper. SLURM, initially developed for large 
 Linux clusters at the Lawrence Livermore National Laboratory (LLNL), 
 is a simple cluster manager that can scale to thousands of processors. 
 SLURM is designed to be flexible and fault-tolerant and can be ported to 
