--- a/trunk/doc/jsspp/conclusions.tex
+++ b/trunk/doc/jsspp/conclusions.tex
@@ -5,9 +5,9 @@ and portable cluster resource management system.
 The contribution of this work is that we have provided a immediately-available
 and open-source tool that virtually anybody can use to efficiently manage clusters of 
 different sizes and architecture.
-We expect SLURM to begin production use on LLNL Linux clusters 
-starting in March 2003 and be available for distribution shortly 
-thereafter. 
+%We expect SLURM to begin production use on LLNL Linux clusters 
+%starting in March 2003 and be available for distribution shortly 
+%thereafter. 
 
 Looking ahead, we anticipate adding support for additional 
 operating systems.
