--- a/trunk/doc/jsspp/intro.tex
+++ b/trunk/doc/jsspp/intro.tex
@@ -8,16 +8,17 @@ The continuous decrease in the price of the COTS parts in conjunction with
 the good scalability of the cluster architecture has now made it feasible to economically
 build large-scale clusters with thousands of processors~\cite{MCRWeb,PCRWeb}.
 
-An essential component that is needed to harness such a resource is a 
-cluster management system.
-A cluster management system (or cluster manager) performs such crucial tasks as
+An essential component that is needed to harness such a computer is a 
+resource management system.
+A resource management system (or resource manager) performs such crucial tasks as
 scheduling user jobs, monitoring machine and job status, launching user applications, and
 managing machine configuration,
-An ideal cluster manager should be simple, efficient, scalable, and fault-tolerant.
+An ideal resource manager should be simple, efficient, scalable, fault-tolerant, 
+and portable.
 
-Unfortunately there are no open-source cluster management systems currently available 
+Unfortunately there are no open-source resource management systems currently available 
 which satisfy these requirements.
-A survey~\cite{Jette02} has revealed that many existing cluster managers have poor scalability and fault-tolerance rendering them unsuitable for large clusters having 
+A survey~\cite{Jette02} has revealed that many existing resource managers have poor scalability and fault-tolerance rendering them unsuitable for large clusters having 
 thousands of processors~\cite{LoadLevelerWeb,LoadLevelerManual}.
 While some proprietary cluster managers are suitable for large clusters, 
 they are typically designed for particular computer systems and/or 
@@ -30,7 +31,7 @@ even though the scheduler does not necessarily meet the need of organization tha
 Clear separation of the cluster management functionality from scheduling policy is desired.
 
 This observation led us to set out to design a simple, highly scalable, and 
-portable cluster management system that performs the core of cluster resource management functions. 
+portable resource management system. 
 The result of this effort is Simple Linux Utility Resource Management 
 (SLURM\footnote{A tip of the hat to Matt Groening and creators of {\em Futurama},
 where Slurm is the most popular carbonated beverage in the universe.}). 
@@ -94,10 +95,9 @@ deterministic.
 \end{itemize}
 
 The main contribution of our work is that we have provided a readily available 
-and inexpensive tool that anybody can use to efficiently manage clusters of different size and architecture. 
-The SLURM is highly scalable\footnote{It was observed that it took less than two seconds for SLURM to launch a thousand-task job on 
-a large cluster currently being built for Lawrence Livermore National Laboratory.}. 
-The SLURM can be easily ported to any cluster system with minimal effort with its plug-in 
+tool that anybody can use to efficiently manage clusters of different size and architecture. 
+SLURM is highly scalable\footnote{It was observed that it took less than five seconds for SLURM to launch a 1900-task job over 950 nodes on recently installed cluster at Lawrence Livermore National Laboratory.}. 
+The SLURM can be easily ported to any cluster system with minimal effort with its plugin 
 capability and can be used with any meta-batch scheduler or a Grid resource broker~\cite{Gridbook}
 with its well-defined interfaces.
 
