Store updated UCRL document number.

--- a/trunk/doc/jsspp/jsspp.tex
+++ b/trunk/doc/jsspp/jsspp.tex
@@ -37,7 +37,7 @@ Government or the University of California, and shall not be used for
 advertising or product endorsement purposes.
 This work was performed under the auspices of the U. S. Department of
 Energy by the University of California, Lawrence Livermore National
-Laboratory under Contract No. W-7405-Eng-48. Document UCRL-TBD.}}
+Laboratory under Contract No. W-7405-Eng-48. Document UCRL-JC-147996.}}
 
 \author{Morris A. Jette \and Andy B. Yoo \and Mark Grondona}
 
