--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.2.1
+===========================
+ -- Fix bug where reconfigure request to slurmctld killed the daemon.
+
 * Changes in SLURM 0.2.0
 ============================
 
